# serapeum

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: github-pages-mkdocs.yml  github-release.yml  pypi-release.yml  test-azure-openai.yml  test-core.yml  test-llama-cpp.yml  test-ollama.yml  test-openai.yml
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/AUTHORS/: index.html
develop/LICENSE/: index.html
develop/change-log/: index.html
develop/developer-guide/SECURITY/: index.html
develop/developer-guide/contributing/: index.html
develop/developer-guide/installation/: index.html
develop/developer-guide/taskfile/: index.html
develop/developer-guide/testing-docs/: index.html
develop/overview/core-package/: index.html
develop/overview/providers/: index.html
develop/overview/providers/adding-new-providers/: index.html
develop/overview/providers/ollama/: index.html
develop/reference/core/embeddings/module/: index.html
develop/reference/core/llms/llm-classes-comparison/: index.html
develop/reference/core/tools/callable_tools/: index.html
develop/reference/core/tools/tools/: index.html
develop/reference/providers/add_new_providers/: index.html
develop/reference/providers/azure-openai/api_reference/: index.html
develop/reference/providers/azure-openai/azure_openai_class/: index.html
develop/reference/providers/azure-openai/azure_openai_components/: index.html
develop/reference/providers/azure-openai/azure_openai_dataflow/: index.html
develop/reference/providers/azure-openai/azure_openai_sequence/: index.html
develop/reference/providers/azure-openai/azure_openai_state/: index.html
develop/reference/providers/azure-openai/examples/: index.html
develop/reference/providers/azure-openai/general/: index.html
develop/reference/providers/llama-cpp/api_reference/: index.html
develop/reference/providers/llama-cpp/examples/: index.html
develop/reference/providers/llama-cpp/general/: index.html
develop/reference/providers/llama-cpp/llama_cpp_class/: index.html
develop/reference/providers/llama-cpp/llama_cpp_components/: index.html
develop/reference/providers/llama-cpp/llama_cpp_dataflow/: index.html
develop/reference/providers/llama-cpp/llama_cpp_sequence/: index.html
develop/reference/providers/llama-cpp/llama_cpp_state/: index.html
develop/reference/providers/ollama/api_reference/: index.html
develop/reference/providers/ollama/examples/: index.html
develop/reference/providers/ollama/general/: index.html
develop/reference/providers/ollama/ollama_class/: index.html
develop/reference/providers/ollama/ollama_components/: index.html
develop/reference/providers/ollama/ollama_dataflow/: index.html
develop/reference/providers/ollama/ollama_sequence/: index.html
develop/reference/providers/ollama/ollama_state/: index.html
develop/reference/providers/openai/api_reference/: index.html
develop/reference/providers/openai/examples/: index.html
develop/reference/providers/openai/general/: index.html
develop/reference/providers/openai/openai-vs-responses/: index.html
develop/reference/providers/openai/openai_class/: index.html
develop/reference/providers/openai/openai_components/: index.html
develop/reference/providers/openai/openai_dataflow/: index.html
develop/reference/providers/openai/openai_sequence/: index.html
develop/reference/providers/openai/openai_state/: index.html
develop/search/: search_index.json
docs/: index.md
docs/developer-guide/: installation.md
docs/overview/: providers.md
docs/overview/providers/: adding-new-providers.md  ollama.md
docs/reference/providers/azure-openai/: api_reference.md  azure_openai_class.md  azure_openai_components.md  azure_openai_dataflow.md  azure_openai_sequence.md  azure_openai_state.md  examples.md  general.md
docs/reference/providers/openai/: api_reference.md  examples.md  general.md  openai-vs-responses.md  openai_class.md  openai_components.md  openai_dataflow.md  openai_sequence.md  openai_state.md
libs/core/: README.md  pyproject.toml
libs/providers/azure-openai/: README.md  change-log.md  pyproject.toml
libs/providers/llama-cpp/: README.md  pyproject.toml
libs/providers/ollama/: README.md  pyproject.toml
libs/providers/openai/: README.md  pyproject.toml
main/: 404.html  index.html  sitemap.xml
main/AUTHORS/: index.html
main/LICENSE/: index.html
main/change-log/: index.html
main/developer-guide/SECURITY/: index.html
main/developer-guide/contributing/: index.html
main/developer-guide/installation/: index.html
main/developer-guide/taskfile/: index.html
main/developer-guide/testing-docs/: index.html
main/overview/core-package/: index.html
main/overview/providers/: index.html
main/overview/providers/adding-new-providers/: index.html
main/overview/providers/ollama/: index.html
main/reference/core/embeddings/module/: index.html
main/reference/core/llms/llm-classes-comparison/: index.html
main/reference/core/tools/callable_tools/: index.html
main/reference/core/tools/tools/: index.html
main/reference/providers/add_new_providers/: index.html
main/reference/providers/llama-cpp/api_reference/: index.html
main/reference/providers/llama-cpp/examples/: index.html
main/reference/providers/llama-cpp/general/: index.html
main/reference/providers/llama-cpp/llama_cpp_class/: index.html
main/reference/providers/llama-cpp/llama_cpp_components/: index.html
main/reference/providers/llama-cpp/llama_cpp_dataflow/: index.html
main/reference/providers/llama-cpp/llama_cpp_sequence/: index.html
main/reference/providers/llama-cpp/llama_cpp_state/: index.html
main/reference/providers/ollama/api_reference/: index.html
serapeum-integrations/tools/serapeum-tools-mcp/: .gitignore  pyproject.toml
serapeum-integrations/tools/serapeum-tools-mcp/examples/: mcp.ipynb
serapeum-integrations/tools/serapeum-tools-mcp/src/serapeum/tools/mcp/: __init__.py  base.py  client.py  tool_spec_mixins.py  utils.py
serapeum-integrations/tools/serapeum-tools-mcp/tests/: test_client.py  test_tools_mcp.py
(+35 files in other folders)
