[project]
name = "serapeum"
version = "0.5.0"
description = "llm utility package"
readme = "README.md"
license = {text = "GNU General Public License v3"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farrag@gmail.com"}
]
keywords = ["llm", "generativeai", "chatbot", "rag", "natural language processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">=3.11,<4.0"
dependencies = [
    "serapeum-core",
    "serapeum-ollama",
    "serapeum-llama-cpp",
    "serapeum-openai",
    "serapeum-azure-openai"
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest-asyncio>=1.2.0",
    "nest-asyncio>=1.6.0",
    "nbval>=0.11.0",
    "mypy>=1.13.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark",
    "pytest-markdown-docs>=0.9.1",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.2.1",
]

docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
    "jupyter",
    "commitizen (>=4.8.3,<5.0.0)",
]

[project.urls]
homepage = "https://github.com/serapeum-org/serapeum"
repository = "https://github.com/serapeum-org/serapeum"
documentation = "https://serapeum-org.github.io/serapeum"
Changelog = "https://serapeum-org.github.io/serapeum/latest/change-log"


[tool.hatch.build.targets.wheel]
packages = ["libs/core/src/serapeum"]


[tool.commitizen]
name = "cz_customize"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
changelog_incremental = true
changelog_merge_prerelease = true

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feature: this feature enables customize through config file"
schema = "<type>: <body>"
schema_pattern = "(feat|fix|refactor|perf|build|ci|chore)(\\(.+\\))?: (.+)"
changelog_pattern = "^(feat|fix|refactor|perf|build|ci|chore)(\\(.+\\))?(!)?:"
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "build", "ci", "chore"]

[tool.flake8]
ignore = ["E501", "W503", "E731", "E203", "E704", "D401", "D102"]
max-line-length = 120
count = true
per-file-ignores = [
    "tests/*:D",
    "*/tests/*:D",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
# Required so pytest recognises serapeum/ (no __init__.py) as a PEP 420
# namespace package and derives module names as serapeum.ollama.* instead
# of ollama.* when running --doctest-modules.
consider_namespace_packages = true
testpaths = [
    "libs/core/tests",
    "libs/providers/ollama/tests",
]
norecursedirs = ["docs"]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "mock: marks tests as mock (deselect with '-m \"not mock\"')",
    "integration: marks tests as integration test (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit test (deselect with '-m \"not unit\"')",
    "function_calling: markdown code block that runs only with local resources (deselect with '-m \"not function_calling\"')",

]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "serapeum.core.base.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.core.llms.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.core.tools.*"
strict = true


[[tool.mypy.overrides]]
module = "serapeum.ollama.*"
strict = true


[tool.uv.workspace]
members = [
    "libs/core",
    "libs/providers/*",
]

#[tool.uv]
#managed = false

[tool.uv.sources]
serapeum-core = { workspace = true }
serapeum-ollama = { workspace = true }
serapeum-llama-cpp = { workspace = true }
serapeum-openai = { workspace = true }
serapeum-azure-openai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
