[project]
name = "serapeum-tools-mcp"
version = "0.1.0"
description = "serapeum tools mcp integration"
authors = [{name = "Mostafa Farrag", email = "moah.farrag@gmail.com"}, {name = "Sebastian Kalisz"}]

readme = "README.md"
license = {text = "GNU General Public License v3"}
maintainers = [{name = "psiace"}]
keywords = ["mcp", "tools"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "mcp>=1.24.0,<2",
    "serapeum-core",
    "pydantic>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "ipinfo>=1.0.0,<2",
    "ipython>=8.10.0",
    "jupyter>=1.0.0,<2",
    "mypy>=0.991",
    "nest-asyncio>=1.5.9,<2",
    "pre-commit>=3.2.0",
    "pylint>=2.15.10",
    "pytest>=7.2.1",
    "pytest-mock>=3.11.1",
    "ruff>=0.11.11",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis>=4.5.5.0",
    "types-requests>=2.28.11.8",
    "types-setuptools>=67.1.0.0",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.4",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.23.8",
]


[tool.hatch.build.targets.sdist]
include = ["src/serapeum/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["src/serapeum/"]
exclude = ["**/BUILD"]

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
